# agentbeam

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/commands/: implement-plan.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/core/: agent_beam.rs  claude_session.rs  cleanup.rs  config.rs  file_collector.rs  mod.rs  provider_monitor.rs  receiver.rs
src/test_utils/: dummy.rs
tests/network-scenarios/: README.md  docker-compose.direct.yml  docker-compose.relay.yml
