[package]
name = "agentbeam"
version = "0.1.0"
edition = "2024"
authors = ["AgentBeam Contributors"]
description = "P2P workspace and session sharing for Claude Code"
license = "MIT"
repository = "https://github.com/agentbeam/agentbeam"

[dependencies]
# Core Iroh dependencies
iroh = { version = "0.91.1" }
iroh-blobs = "0.93.0"
iroh-base = "0.91.1"

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# CLI and UI
clap = { version = "4.5.43", features = ["derive"] }
indicatif = "0.18.0"
colored = "3.0.0"

# File handling
ignore = "0.4.23"
walkdir = "2.5.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Utilities
hex = "0.4.3"
bytes = "1.10.1"
dirs = "5.0"
futures = "0.3.31"
rand = "0.9.2"
url = "2.5.4"
uuid = { version = "1.10", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
